@@ -255,8 +255,9 @@ public abstract class Entity implements Informing {
 	}
 
 	public void setAnimation(Animation a) {
-		if (a != null && animation.getClass() != death.getClass()
-				&& animation != a) {// tut
+		if (a != null
+				&& (death != null ? animation.getClass() != death.getClass()
+						: true) && animation != a) {// tut
 			nextAnimation = a;
 			a.setup(this);
 		}
